--- a/Index.html
+++ b/Index.html
@@ -13,25 +13,40 @@
 </head>
 <body>
 <div class="container d-flex flex-column position-relative min-vh-100">
-    <div class="flex-grow-1">
-        <div class="row">
-            <div class="col-8">
-                <div class="w-100" id="canvasTop">
-                    <canvas class="border border-danger mx-auto  p-0" id="canvas">There should be canvas 0_0</canvas>
-                </div>
-            </div>
-            <div class="col-4">
-                <label>
-                    <input type="range" min="1" max="100" value="50">
-                </label>
-                <div id="isCircle"></div>
-            </div>
-        </div>
+    <!--<div class="flex-grow-1">-->
+    <!--<div class="row">-->
+    <!--<div class="col-8">-->
+    <div class="w-100" id="canvasTop">
+        <canvas class="border border-danger mx-auto  p-0" id="canvas">There should be canvas 0_0</canvas>
     </div>
+    <!--</div>-->
+    <!--<div class="col-4">-->
+    <!--<label>-->
+    <!--<form>-->
+    <!--<div class="form-group">-->
+    <!--<label for="donutSizeControl">Donut focus: <span-->
+    <!--id="donutSizeControlValue">50</span>%</label>-->
+    <!--<input type="range" class="form-control-range" id="donutSizeControl"-->
+    <!--min="5" max="100" value="50" oninput="dsControl(this.value)">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+    <!--<input class="form-check-input" type="checkbox" id="drawPathControl"-->
+    <!--oninput="dpControl(this.checked)" checked>-->
+    <!--<label class="form-check-label" for="drawPathControl">-->
+    <!--Draw path-->
+    <!--</label>-->
+    <!--</div>-->
+    <!--</form>-->
+    <!--</label>-->
+    <div id="isCircle"></div>
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
 </div>
 
 <script src="draw.js"></script>
 <script src="logic.js"></script>
+<!--<script src="control.js"></script>-->
 
 <!--Bootstrap scary something-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
